--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -125,7 +125,8 @@ ___  ___        _      _  _
   <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
     [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2"
     [finalDiagnosisApproval]="finalDiagnosisApproval" [isCancelFinalDiagnosisApproval]='isCancelFinalDiagnosisApproval'
-    [patientName]="patientName" (cancelApproval)="cancelApproval($event)" [approvedDate]="approvedDate">
+    [patientName]="patientName" (cancelApproval)="cancelApproval($event)" [approvedDate]="approvedDate"
+    [admissionNo]="admissionNo" [dischargeNo]="dischargeNo">
   </app-chh-app-final-diagnosis>
   <!-- <ion-card mode="ios"  *ngIf="!isDesktop" >
     <ion-list>
