--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
             </ion-toolbar>a
         </ion-header-->
         <ion-content>
-            <div class="menu-header-bg">
-                <ion-item lines="none" color="mango">
+            <div color="mango" class="menu-header-bg">
+                <ion-item lines="none" color="mango" class='menu-header-bg'>
 
 
 
