--- a/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
+++ b/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
@@ -1,5 +1,5 @@
 <!--ion-card mode="ios"  -->
-<ion-card mode="ios" *ngIf="data != 'AC' && !isDesktop">
+<ion-card mode="ios" *ngIf="data != 'AC'">
   <ion-list>
     <ion-item style="padding-top: 10px;">
       <div class="ion-text-wrap"><b>Final Diagnosis</b><br /></div>
