--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -16,37 +16,46 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="!isPDFLoading">
-    <ion-item>
-      <ion-label style="margin-top: -10px;">
-        <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
-          <ion-skeleton-text animated></ion-skeleton-text>
-        </ion-item>
-        <ion-skeleton-text animated></ion-skeleton-text>
-      </ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <pinch-zoom style="background-color: rgb(255, 255, 255);" *ngIf="isPDFLoading">
-      <pdf-viewer [src]="pdfSrc" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
-        [zoom]="1" [zoom-scale]="'page-width'" [stick-to-page]="false" [render-text]="true"
-        [external-link-target]="'blank'" [autoresize]="true" [show-borders]="false" style="width: 100vh; height: 60vh;">
-      </pdf-viewer>
-    </pinch-zoom>
-
-    <ion-button id="trigger-button-certificate" style="display:none">Sign Document</ion-button>
+  <!--button (click)="generatePDF()">Generate PDF</button-->
+  <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col>
-        <ion-button mode="ios" size="small" color="mango" shape="" expand="block" *ngIf="isPDFLoading"
-          (click)="onClick()">Sign Document</ion-button>
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <ion-card *ngIf="!isPDFLoading">
+          <ion-item>
+            <ion-label style="margin-top: -10px;">
+              <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                <ion-skeleton-text animated></ion-skeleton-text>
+              </ion-item>
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-label>
+          </ion-item>
+        </ion-card>
+        <ion-card>
+          <pinch-zoom style="background-color: rgb(255, 255, 255);" *ngIf="isPDFLoading">
+            <pdf-viewer [src]="pdfSrc" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
+              [zoom]="1" [zoom-scale]="'page-width'" [stick-to-page]="false" [render-text]="true"
+              [external-link-target]="'blank'" [autoresize]="true" [show-borders]="false"
+              style="width: 100vh; height: 60vh;">
+            </pdf-viewer>
+          </pinch-zoom>
+
+          <ion-button id="trigger-button-certificate" style="display:none">Sign Document</ion-button>
+          <ion-row>
+            <ion-col>
+              <ion-button mode="ios" size="small" color="mango" shape="" expand="block" *ngIf="isPDFLoading"
+                (click)="onClick()">Sign Document</ion-button>
+            </ion-col>
+
+          </ion-row>
+
+
+        </ion-card>
       </ion-col>
-
     </ion-row>
-  </ion-card>
+  </ion-grid>
 
 
-
-  <ion-modal trigger="trigger-button-certificate" show-backdrop="true" class="ion6modaltest">
+  <ion-modal trigger="trigger-button-certificate" show-backdrop="true" class="ion5modalSign">
 
     <ng-template>
       <ion-content class="blur testssss">
@@ -69,10 +78,12 @@
                     Close</ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom">
-                  <ion-button size="small" color="tertiary" class="floatRight" (click)="clearPad()">Clear</ion-button>
+                  <ion-button size="small" color="tertiary" class="floatRight" (click)="clearPad()">Clear
+                  </ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom ">
-                  <ion-button size="small" color="primary" class="floatRight" (click)="savePad()">Save</ion-button>
+                  <ion-button size="small" color="primary" class="floatRight" (click)="savePad()">Save
+                  </ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
