added sign and approve

--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -43,7 +43,7 @@
           <ion-row>
             <ion-col>
               <ion-button mode="ios" size="small" color="mango" shape="" expand="block" *ngIf="isPDFLoading"
-                (click)="onClick()">Sign Document</ion-button>
+                (click)="onClick()">Sign and Approve Document</ion-button>
             </ion-col>
 
           </ion-row>
