more fix on signature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
             </ion-toolbar>a
         </ion-header-->
         <ion-content>
-            <div color="mango" class="menu-header-bg">
+            <div color="mango" class="menu-header-bg" style="background: #275228">
                 <ion-item lines="none" color="mango" class='menu-header-bg'>
 
 
