commented INBOX and all other contents of INBOX

--- a/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
+++ b/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
@@ -22,17 +22,7 @@
       </div>
     </ion-item>
   </ion-list>
-  <ion-footer *ngIf="isCancelFinalDiagnosisApproval =='RA'">
-    <!--ion-row>
-      <ion-col>
-        <ion-text style="font-size: 12px;">Approved on : {{approvedDate}}</ion-text>
-
-      </ion-col>
-      <ion-col>
-        <ion-button size="small" color="warning" shape="round" expand="block" (click)="approvePendingAPproval()">Cancel
-          Approval</ion-button>
-      </ion-col>
-    </ion-row-->
+  <!--ion-footer *ngIf="isCancelFinalDiagnosisApproval =='RA'">
     <ion-row>
       <ion-col>
         <ion-button mode="ios" size="small" color="mango" shape="" expand="block" (click)="viewMedicalCertificate()">
@@ -40,5 +30,5 @@
       </ion-col>
 
     </ion-row>
-  </ion-footer>
+  </ion-footer-->
 </ion-card>
