--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -3,10 +3,10 @@
     <ion-toolbar color="mango">
       <ion-title>
         <ion-icon name="stats-chart-outline"></ion-icon> {{this.constants.MENU__VALUE__DASHBOARD}}
-        <ion-icon *ngIf="isNotification==false" name="mail-outline" style="float:right" routerLink="/menu/inbox"
+        <!--ion-icon *ngIf="isNotification==false" name="mail-outline" style="float:right" routerLink="/menu/inbox"
           routerDirection="root"> </ion-icon>
         <ion-icon *ngIf="isNotification==true" name="mail-unread-outline" style="float:right" routerLink="/menu/inbox"
-          routerDirection="root"> </ion-icon>
+          routerDirection="root"> </ion-icon-->
       </ion-title>
     </ion-toolbar>
   </div>
