--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -11,10 +11,10 @@
         </ion-icon-->
 
 
-        <ion-icon *ngIf="isNotification==false" name="mail-outline" style="float:right" routerLink="/menu/inbox"
+        <!--ion-icon *ngIf="isNotification==false" name="mail-outline" style="float:right" routerLink="/menu/inbox"
           routerDirection="root"> </ion-icon>
         <ion-icon *ngIf="isNotification==true" name="mail-unread-outline" style="float:right" routerLink="/menu/inbox"
-          routerDirection="root"> </ion-icon>
+          routerDirection="root"> </ion-icon-->
       </ion-title>
     </ion-toolbar>
   </div>
