--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -3,9 +3,9 @@
     <ion-toolbar color="mango">
       <ion-title>
         <ion-icon name="newspaper-outline"></ion-icon> News Feed
-        <ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
+        <!--ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
           routerLink="/menu/inbox" routerDirection="root">
-        </ion-icon>
+        </ion-icon-->
       </ion-title>
     </ion-toolbar>
 
