--- a/src/app/pages/executuve/tabs-newsfeed/tabs-newsfeed.page.html
+++ b/src/app/pages/executuve/tabs-newsfeed/tabs-newsfeed.page.html
@@ -4,17 +4,12 @@
       <ion-title>
         <ion-icon name="newspaper-outline"></ion-icon> News Feed
       </ion-title>
-      <ion-buttons
-      slot="end"
-      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
-    >
-    <ion-button
-    (click)="settings()"
-      >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
-    </ion-button>
-  </ion-buttons>
+      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+        <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
-    
+
   </div>
 
 
@@ -22,44 +17,46 @@
 </ion-header>
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
-    <ion-refresher-content
-      pullingIcon="chevron-down-circle-outline"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles"
-      refreshingText="Refreshing...">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
+      refreshingSpinner="circles" refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
 
 
 
-  
+
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <div *ngFor="let x of newsfeed">
-        <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility" mode="ios">
-          <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
+          <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility" mode="ios">
+            <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
           <div class="rect-img-container"  *ngIf="x.imageUrl != ''">
             <img class="rect-img" src="{{x.imageUrl}}" alt="">
           </div-->
 
 
-          <div *ngIf="x.imageUrl != ''" class="use-cover-background square" style="background-image: url({{x.imageUrl}})"></div>
+            <div *ngIf="x.imageUrl != ''" class="use-cover-background square"
+              style="background-image: url({{x.imageUrl}})"></div>
 
-          <ion-card-header>
-            <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
+            <ion-card-header>
+              <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
 
-            <p [innerHTML]="x.contentShortDesc"></p>
-            
-          </ion-card-content>
-        </ion-card>
+              <p [innerHTML]="x.contentShortDesc"></p>
+
+            </ion-card-content>
+          </ion-card>
         </div>
-       
+
       </ion-col>
-    </ion-row>        
+    </ion-row>
   </ion-grid>
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
 <!--ion-content class="ion-padding" color="light">  
   <ion-list>  
@@ -71,4 +68,4 @@
       loadingText="Loading more data...">  
     </ion-infinite-scroll-content>  
   </ion-infinite-scroll>  
-</ion-content-->  
+</ion-content-->
