--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.scss
@@ -10,7 +10,13 @@
     bottom: 0px;
   }
 
-
+.insurance_hmo{
+  padding-left: 25px;
+  margin-top: -10px;
+  z-index: 9;
+  position: relative;
+  font-size:12px;
+}
 
   .nav-primary.active {
     color: #275228;
