added back sign and approve medical certificate

--- a/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
+++ b/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
@@ -22,7 +22,7 @@
       </div>
     </ion-item>
   </ion-list>
-  <!--ion-footer *ngIf="isCancelFinalDiagnosisApproval =='RA'">
+  <ion-footer *ngIf="isCancelFinalDiagnosisApproval =='RA'">
     <ion-row>
       <ion-col>
         <ion-button mode="ios" size="small" color="mango" shape="" expand="block" (click)="viewMedicalCertificate()">
@@ -30,5 +30,5 @@
       </ion-col>
 
     </ion-row>
-  </ion-footer-->
+  </ion-footer>
 </ion-card>
