--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -6,9 +6,9 @@
         {{this.constants.MENU__VALUE__IN_PATIENTS}} <ion-text style="font-size:14px">
           {{admittedOrDischargeLabel}}
         </ion-text>
-        <!--ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
+        <ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
           routerLink="/menu/inbox" routerDirection="root">
-        </ion-icon-->
+        </ion-icon>
 
 
         <!--ion-icon *ngIf="isNotification==false" name="mail-outline" style="float:right" routerLink="/menu/inbox"
