updated version to 3.0.11

--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -78,11 +78,11 @@
                     Close</ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom">
-                  <ion-button size="small" color="tertiary" class="floatRight" (click)="clearPad()">Clear
+                  <ion-button size="small" color="tertiary" class="" (click)="clearPad()">Clear
                   </ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom ">
-                  <ion-button size="small" color="primary" class="floatRight" (click)="savePad()">Save
+                  <ion-button size="small" color="primary" class="" (click)="savePad()">Save
                   </ion-button>
                 </ion-col>
               </ion-row>
