--- a/src/global.scss
+++ b/src/global.scss
@@ -608,7 +608,9 @@ ion-modal.ion6modalsign {
   }
 }
 
-
+.margintop-15{
+  margin-top: -15px !important;
+}
 
 .bdrSolid1pxBlack{
   border:solid 1px black
