updated logo of insurance

--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -78,8 +78,8 @@
           <div *ngFor="let x of data">
 
             <div *ngIf=" x.insurance_hmo !=null">
-              <ion-icon name="information-circle-outline"></ion-icon>
-              <span style="font-size: 13px;"> {{ x.insurance_hmo }}</span>
+              <ion-icon name="shield-checkmark-outline"></ion-icon>
+              <span class=" font-size12"> {{ x.insurance_hmo }}</span>
             </div>
           </div>
 
@@ -179,8 +179,8 @@
           <div *ngFor="let x of data">
 
             <div *ngIf=" x.insurance_hmo !=null">
-              <ion-icon name="information-circle-outline"></ion-icon>
-              <span style="font-size: 13px;"> {{ x.insurance_hmo }}</span>
+              <ion-icon name="shield-checkmark-outline"></ion-icon>
+              <span class=" font-size12"> {{ x.insurance_hmo }}</span>
             </div>
           </div>
 
