--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -114,7 +114,9 @@ ______             _     _                        _   _                   _
           <ion-checkbox color="primary" slot="end" value="insurance" [(ngModel)]="insurance"
             (click)="buttonclick('insurance',insurance)"></ion-checkbox>
         </ion-item>
-        <div class="insurance_hmo ion-text-wrap" *ngIf="insurance_hmo!=null">{{insurance_hmo}}</div>
+        <div class="insurance_hmo ion-text-wrap" *ngIf="insurance_hmo!=null">
+          <ion-icon name="shield-checkmark-outline"></ion-icon> {{insurance_hmo}}
+        </div>
         <ion-item lines="none">
           <ion-label class="ion-text-wrap">Personal + PhilHealth</ion-label>
           <ion-checkbox color="primary" slot="end" value="philhealth" [(ngModel)]="personalphilhealth"
