--- a/src/app/pages/doctors-information/view-medcert/view-medcert.page.html
+++ b/src/app/pages/doctors-information/view-medcert/view-medcert.page.html
@@ -1,18 +1,12 @@
-<ion-header mode="md" class="ion-no-border" *ngIf="isPortrait">
+<ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
   <div>
     <ion-toolbar color="mango">
-      <ion-title>
-        <ion-icon name="document-text-outline"></ion-icon>Medical Certificate
-      </ion-title>
-      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
-        <ion-button (click)="back()" color="chh-css-primary2"
-          class="ios button button-clear ion-activatable ion-focusable hydrated">
-          Back&nbsp; <ion-icon name="log-out-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
+      <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
+        <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+      </span>
+      <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Medical Certificate </span>
     </ion-toolbar>
   </div>
-
 </ion-header>
 
 <ion-content>
