AB test on calendar

--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -49,7 +49,7 @@
           <ng-template>
             <ion-content class="blur testssss" style="width:100% !important">
               <ion-datetime #popoverDatetime presentation="date" (ionChange)="formatDate(popoverDatetime.value)"
-                showDefaultButtons="true" [value]="dateValue">
+                showDefaultButtons="false" [value]="dateValue">
               </ion-datetime>
             </ion-content>
           </ng-template>
@@ -113,7 +113,7 @@
             <ng-template>
               <ion-content class="blur testssss" style="width:100% !important">
                 <ion-datetime #popoverDatetime presentation="date" (ionChange)="formatDate(popoverDatetime.value)"
-                  showDefaultButtons="true" [value]="dateValue">
+                  showDefaultButtons="false" [value]="dateValue">
                 </ion-datetime>
               </ion-content>
             </ng-template>
