Rename 'cancel approval' to 'revoke approval'.

--- a/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
+++ b/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
@@ -36,7 +36,7 @@
           <ion-row>
             <ion-col>
               <ion-button mode="ios" size="small" color="warning" shape="" expand="block" *ngIf="isPDFLoading"
-                (click)="cancelApproval()">Cancel Approval</ion-button>
+                (click)="cancelApproval()">Revoke Approval</ion-button>
             </ion-col>
 
           </ion-row>
