--- a/src/app/pages/doctors-information/view-medcert/view-medcert.page.html
+++ b/src/app/pages/doctors-information/view-medcert/view-medcert.page.html
@@ -36,7 +36,7 @@
           <ion-row *ngFor="let x of selectedPatient">
             <ion-col>
               <ion-button mode="ios" size="small" color="warning" shape="" expand="block" *ngIf="isPDFLoading"
-                (click)="cancelApproval(x)">Cancel Approval</ion-button>
+                (click)="cancelApproval(x)">Revoke Approval</ion-button>
             </ion-col>
 
           </ion-row>
