--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -10,7 +10,7 @@
 
 <ion-content *ngIf="!isDesktop" id="content">
   <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [is_pwd]="is_pwd" [is_senior]="is_senior"
-    [forMoreOrLess]="true">
+    [forMoreOrLess]="true" [is_philhealth_membership]="is_philhealth_membership">
   </app-chh-app-patient-header>
 
   <!--
