--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -62,7 +62,7 @@
   </ion-grid>
 
   <pfSummaryPxInfo [data]="data" [site]="site" [is_pwd]="is_pwd" [is_senior]="is_senior" [dateAdmitted]="dateAdmitted"
-    [data1]="data1" [withVat]="withVat" [payvenueTxt]="payvenue">
+    [data1]="data1" [withVat]="withVat" [payvenueTxt]="payvenue" [is_philhealth_membership]="is_philhealth_membership">
   </pfSummaryPxInfo>
 
   <pfsummary [payvenueN]="payvenueN" [data1]="data1" [withVatN]="withVatN"></pfsummary>
