--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -67,7 +67,8 @@ ___  ___        _      _  _
 </ion-header>
 <ion-content *ngIf="!isDesktop">
   <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [dischargeNotice]="dischargeNotice"
-    [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior">
+    [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior"
+    [is_philhealth_membership]="is_philhealth_membership">
   </app-chh-app-patient-header>
 
   <app-chh-app-admitting-diagnosis [admittingDiagnosis]="admittingDiagnosis" [admittingDiagnosis1]="admittingDiagnosis1"
