--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.scss
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.scss
@@ -10,3 +10,21 @@
 .addpadding {
   padding-top: 5px;
 }
+.height300 {
+  height: 300px;
+}
+.height400 {
+  height: 400px;
+}
+.height500{
+  height: 500px;
+}
+.height600 {
+  height: 600px;
+}
+.height700 {
+  height: 700px;
+}
+.height800 {
+  height: 800px;
+}
