shadows on graph

--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
@@ -83,17 +83,16 @@
             <ion-row>
               <ion-col size-xs="12" class="ion-text-center">
                 <ion-col>
-                  <ion-item class="addpadding" lines="none">
+                  <ion-item class="" lines="none">
                     <div class='center-button'>
                       <b class="ion-text-center">{{this.yearTreandTO}} Total Admissions YTD: {{this.MTATotal}}</b>
                     </div>
                   </ion-item>
                 </ion-col>
                 <div id="populateMontlyTotalAdmissions"></div>
-                <br />
-                <br />
+
                 <ion-col>
-                  <ion-item class="addpadding" lines="none">
+                  <ion-item class="" lines="none">
                     <div class='center-button'>
                       <b class="ion-text-center">{{this.yearTreandTO}} Daily Average Census per Month</b>
                     </div>
@@ -106,8 +105,7 @@
 
 
 
-                <br />
-                <br />
+
                 <ion-col>
                   <ion-item class="addpadding" lines="none">
                     <div class='center-button'>
