--- a/src/app/pages/others/help/help.page.html
+++ b/src/app/pages/others/help/help.page.html
@@ -14,8 +14,28 @@
   <ion-list>
     <ion-item [routerDirection]="'root'" routerLink="/menu/help">
 
-      <ion-label>
-        PF Upgrade
+      <ion-label id="trigger-button" (click)="addFakeState()">
+        Click to open Helper
+        <ion-modal trigger="trigger-button">
+          <ng-template>
+            <ion-header mode="md" class="ion-no-border">
+              <div>
+                <ion-toolbar color="mango">
+                  <span class="padding-left-10" (click)="closeModal()" routerDirection="backward"
+                    color="chh-css-primary2">
+                    <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+                  </span>
+                  <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Title here </span>
+                </ion-toolbar>
+              </div>
+            </ion-header>
+            <ion-content>
+              <ion-card mode="ios">
+                <ion-item>Content Date Here</ion-item>
+              </ion-card>
+            </ion-content>
+          </ng-template>
+        </ion-modal>
       </ion-label>
     </ion-item>
   </ion-list>
