--- a/src/app/pages/others/help/help.page.html
+++ b/src/app/pages/others/help/help.page.html
@@ -11,32 +11,62 @@
 </ion-header>
 
 <ion-content>
+  <!-- LIST HERE-->
+
+  <!-- list one -->
   <ion-list>
     <ion-item [routerDirection]="'root'" routerLink="/menu/help">
-
-      <ion-label id="trigger-button" (click)="addFakeState()">
-        Click to open Helper
-        <ion-modal trigger="trigger-button">
-          <ng-template>
-            <ion-header mode="md" class="ion-no-border">
-              <div>
-                <ion-toolbar color="mango">
-                  <span class="padding-left-10" (click)="closeModal()" routerDirection="backward"
-                    color="chh-css-primary2">
-                    <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
-                  </span>
-                  <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Title here </span>
-                </ion-toolbar>
-              </div>
-            </ion-header>
-            <ion-content>
-              <ion-card mode="ios">
-                <ion-item>Content Date Here</ion-item>
-              </ion-card>
-            </ion-content>
-          </ng-template>
-        </ion-modal>
+      <ion-label id="open-modal-1" (click)="addFakeState()">
+        Click to open Helper - 1
       </ion-label>
     </ion-item>
   </ion-list>
+  <!-- list two -->
+  <ion-list>
+    <ion-item [routerDirection]="'root'" routerLink="/menu/help">
+      <ion-label id="open-modal-2" (click)="addFakeState()">
+        Click to open Helper - 2
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  <!-- Modal for list one -->
+  <ion-modal trigger="open-modal-1">
+    <ng-template>
+      <ion-header mode="md" class="ion-no-border">
+        <div>
+          <ion-toolbar color="mango">
+            <span class="padding-left-10" (click)="closeModal()" routerDirection="backward" color="chh-css-primary2">
+              <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+            </span>
+            <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Helper - 1 </span>
+          </ion-toolbar>
+        </div>
+      </ion-header>
+      <ion-content>
+        <ion-card mode="ios">
+          <ion-item>Content Date Here</ion-item>
+        </ion-card>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+  <!-- Modal for list two -->
+  <ion-modal trigger="open-modal-2">
+    <ng-template>
+      <ion-header mode="md" class="ion-no-border">
+        <div>
+          <ion-toolbar color="mango">
+            <span class="padding-left-10" (click)="closeModal()" routerDirection="backward" color="chh-css-primary2">
+              <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+            </span>
+            <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Helper - 2 </span>
+          </ion-toolbar>
+        </div>
+      </ion-header>
+      <ion-content>
+        <ion-card mode="ios">
+          <ion-item>Content Date Here for data 2</ion-item>
+        </ion-card>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
