updated buttons on sign and approve

--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -67,15 +67,18 @@
             <ion-grid class="noPaddingTop noPaddingBottom">
               <ion-row class="noPaddingTop noPaddingBottom">
                 <ion-col class="noPaddingTop noPaddingBottom ">
-                  <ion-button size="small" color="medium" style="padding-top: 0px !important;" (click)="closeModal()">
+                  <ion-button size="small" color="medium" expand="block" shape="round"
+                    style="padding-top: 0px !important;" (click)="closeModal()">
                     Close</ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom">
-                  <ion-button size="small" color="tertiary" class="" (click)="clearPad()">Clear
+                  <ion-button size="small" color="tertiary" expand="block" shape="round" class="" (click)="clearPad()">
+                    Clear
                   </ion-button>
                 </ion-col>
                 <ion-col class="noPaddingTop noPaddingBottom ">
-                  <ion-button size="small" color="primary" class="" (click)="savePad()">Save
+                  <ion-button size="small" color="primary" expand="block" shape="round" class="" (click)="savePad()">
+                    Save
                   </ion-button>
                 </ion-col>
               </ion-row>
