added pop over on inbox selection

--- a/src/app/pages/doctors-information/inbox/inbox.page.scss
+++ b/src/app/pages/doctors-information/inbox/inbox.page.scss
@@ -3,3 +3,11 @@
 .custom-font {
     font-family: 'Inconsolata', monospace;
 }
+
+.boldMe{
+    font-weight: bold;
+}
+
+.unboldMe{
+    font-weight: normal;
+}
