--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -1,4 +1,4 @@
-<ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
+<ion-header mode="md" class="ion-no-border">
   <div>
     <ion-toolbar color="mango">
       <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
