--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -1,11 +1,38 @@
-<ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
+<ion-header mode="md" class="ion-no-border">
   <div>
     <ion-toolbar color="mango">
-      <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
+      <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2"
+        *ngIf="!isDesktop">
         <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
       </span>
-      <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Inbox </span>
+      <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Inbox <span class="font-12">(Medical
+          Certificate)</span>
+        <ion-icon style="float:right; padding-right:20px" name="ellipsis-vertical-outline" id="trigger-inbox-popover"
+          class="pointer">
+        </ion-icon>
+      </span>
+      <ion-popover trigger="trigger-inbox-popover">
+        <ng-template>
+          <ion-content>
+            <ion-list>
+              <ion-list-header>Medical Certificate </ion-list-header>
+
+              <ion-item (click)="changeMode('FA')" [ngClass]="{'boldMe': selected === 'FA'}">
+                <ion-label>&nbsp;For Approval</ion-label>
+              </ion-item>
+              <ion-item (click)="changeMode('FR')" [ngClass]="{'boldMe': selected === 'FR'}">
+                <ion-label>&nbsp;For Revision</ion-label>
+              </ion-item>
+              <ion-item (click)="changeMode('RA')" [ngClass]="{'boldMe': selected === 'RA'}">
+                <ion-label>&nbsp;Approved</ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-content>
+        </ng-template>
+      </ion-popover>
+
     </ion-toolbar>
+
     <!--ion-toolbar color="mango">
       <ion-title>
         <ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'"></ion-icon> Inbox
@@ -18,15 +45,21 @@
       </ion-buttons>
     </ion-toolbar-->
   </div>
-  <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="selected" color="secondary" mode='ios'>
+  <!--ion-segment [(ngModel)]="selected" color="secondary" mode='ios'>
     <ion-segment-button value="FA">
       <ion-label>For Approval</ion-label>
     </ion-segment-button>
     <ion-segment-button value="RA">
       <ion-label>Approved</ion-label>
     </ion-segment-button>
-
-  </ion-segment>
+  </ion-segment-->
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3" size-lg="4" offset-lg="4">
+        <ion-item lines="none"><label> : {{modeSelected}}</label></ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-header>
 
 <ion-content>
