--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -38,11 +38,11 @@
               <!--ion-button mode="ios" size="small" color="mango" shape="" expand="block" *ngIf="isPDFLoading"
                 (click)="openSignaturePad()">Sign and Approve Document</ion-button-->
 
-              <ion-button (click)="openConsent()" id="trigger-button" mode="ios" size="small" color="mango" shape=""
-                expand="block">Sign and Approve Document
+              <ion-button (click)="openConsent()" mode="ios" size="small" color="mango" shape="" expand="block">Sign and
+                Approve Document
               </ion-button>
-
-              <ion-modal trigger="trigger-button">
+              <ion-button id="trigger-button-consent" style="display:none">trigger-button-consent</ion-button>
+              <ion-modal trigger="trigger-button-consent">
                 <ng-template>
                   <ion-header mode="md" class="ion-no-border">
                     <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
@@ -112,7 +112,59 @@
 
           </ion-row>
 
+          <ion-button id="trigger-button-show-signature" style="display:none">Click to open modal</ion-button>
+          <ion-modal trigger="trigger-button-show-signature">
+            <ng-template>
+              <ion-header mode="md" class="ion-no-border">
+                <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
+                  <ion-title>
+                    <ion-icon name="pencil-outline"></ion-icon> Confirm Signature
+                  </ion-title>
+                  <ion-buttons slot="end"
+                    class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+                    <ion-button id="buttonPrivatePolicyAlertClose" (click)="closeModal()" color="chh-css-primary2">
+                      Close&nbsp;
+                      <ion-icon name="close-outline"></ion-icon>
 
+                    </ion-button>
+                  </ion-buttons>
+                </ion-toolbar>
+              </ion-header>
+              <ion-content>
+
+                <ion-item lines="none">
+
+                  <img src="{{signatureBase64Full}}" />
+                </ion-item>
+                <ion-item lines="none">
+                  <ion-text>
+                    Would you like to reuse your saved signature?
+                  </ion-text>
+
+                </ion-item>
+
+
+
+
+              </ion-content>
+              <ion-footer collapse="fade">
+                <ion-toolbar>
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col size="6">
+                        <ion-button color="warning" expand="block" shape="round" (click)="resignSignature()">Sign Again
+                        </ion-button>
+                      </ion-col>
+                      <ion-col size="6">
+                        <ion-button color="mango" expand="block" shape="round" (click)="useOldSignature()">Yes
+                        </ion-button>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
+                </ion-toolbar>
+              </ion-footer>
+            </ng-template>
+          </ion-modal>
         </ion-card>
       </ion-col>
     </ion-row>
