--- a/src/global.scss
+++ b/src/global.scss
@@ -607,7 +607,34 @@ ion-modal.ion6modalsign {
     }
   }
 }
+ion-modal.ion6modalviewsignature {
+  --width: 100%;
+  --height: 100%;
+  --background: rgba(255, 255, 255, 0.2);
 
+  &::part(content) {
+    backdrop-filter: blur(6px);
+  }
+
+  .customBackgroundColor {
+    width: 100%;
+    height: 100%;
+  }
+
+  ion-content.blur {
+    --background: transparent;
+  --padding-top: 25%;
+    @media (min-width: 767px) {
+   
+      --padding-end: 25%;
+      --padding-start: 25%;
+    }
+
+    ion-datetime {
+      border-radius: 8px;
+    }
+  }
+}
 .margintop-15{
   margin-top: -15px !important;
 }
