fixed minor bugs on sign signature

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -11,7 +11,7 @@
           class="pointer">
         </ion-icon>
       </span>
-      <ion-popover trigger="trigger-inbox-popover">
+      <ion-popover trigger="trigger-inbox-popover" dismiss-on-select="true">
         <ng-template>
           <ion-content>
             <ion-list>
